[package]
name = "advent_2018"
version = "0.1.0"
authors = ["Arthur E. Jones <PartyLich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
lazy_static = "1.4.0"
parser = { git = "https://github.com/PartyLich/advent2020" }
